--- a/gp/atualizar/cliente.html
+++ b/gp/atualizar/cliente.html
@@ -70,11 +70,11 @@
     </li>
 	<li class="submenu"> <a href="#"><i class="icon-list-ul"></i> <span>Relatório</span> <span class="label label-important"></span></a>
       <ul>
+	    <li><a href="../relatorios/produto.html">Produto</a></li>
+		<li><a href="../relatorios/compra.html">Compra</a></li>
         <li><a href="../relatorios/venda.html">Venda</a></li>
         <li><a href="../relatorios/fornecedor.html">Fornecedor</a></li>
-        <li><a href="../relatorios/produto.html">Produto</a></li>
 		<li><a href="../relatorios/cliente.html">Cliente</a></li>
-		<li><a href="../relatorios/compra.html">Compra</a></li>
       </ul>
     </li>
 	
@@ -98,7 +98,7 @@
         </div>
         <div class="widget-content nopadding">
           <form  id="form" class="form-horizontal">
-            <div class="control-group">
+			<div class="control-group">
               <label class="control-label">*Nome Completo: </label>
               <div class="controls">
                 <input type="text" class="span11" name="nome" placeholder="Nome Completo" id="nome"/>
@@ -178,12 +178,12 @@
 			 <div class="control-group">
               <label for="normal" class="control-label">Telefone.</label>
               <div class="controls">
-                <input type="text" id="mask-celular" name="telefone"  class="span8 mask text" placeholder="(__) _ ____-____" id="telefone">
+                <input type="text" id="mask-celular" name="telefone"  class="span8 mask text" placeholder="(__) _ ____-____">
                 <span class="help-block blue span8">(DDD) 9 9999-9999</span> </div>
 				<div><span class="help-block blue span8">*Campos Obrigatórios</span> </div>
             </div>
             <div class="form-actions">
-              <input id="cadastrar" type="submit" class="btn btn-success" value="Cadastrar">
+              <input id="cadastrar" type="submit" class="btn btn-success" value="Atualizar">
             </div>
           </form>
         </div>
