--- a/gp/cadastros/fornecedor.html
+++ b/gp/cadastros/fornecedor.html
@@ -68,11 +68,11 @@
 		</li>
 		<li class="submenu"> <a href="#"><i class="icon-list-ul"></i> <span>Relatório</span> <span class="label label-important"></span></a>
 			<ul>
-				<li><a href="../relatorios/venda.html">Venda</a></li>
-				<li><a href="../relatorios/fornecedor.html">Fornecedor</a></li>
-				<li><a href="../relatorios/produto.html">Produto</a></li>
-				<li><a href="../relatorios/cliente.html">Cliente</a></li>
-				<li><a href="../relatorios/compra.html">Compra</a></li>
+	    <li><a href="../relatorios/produto.html">Produto</a></li>
+		<li><a href="../relatorios/compra.html">Compra</a></li>
+        <li><a href="../relatorios/venda.html">Venda</a></li>
+        <li><a href="../relatorios/fornecedor.html">Fornecedor</a></li>
+		<li><a href="../relatorios/cliente.html">Cliente</a></li>
 			</ul>
 		</li>
 		
@@ -164,7 +164,7 @@
 			<div class="control-group">
               <label class="control-label">CEP: </label>
               <div class="controls">
-                <input type="text" class="span11" name="cep" placeholder="CEP" value="38930000" id="mask-cep"/>
+                <input type="text" class="span11" name="cep" placeholder="CEP" value="38900-000" id="mask-cep"/>
               </div>
             </div>
 			<div class="control-group">
