--- a/gp/vendas/venda.html
+++ b/gp/vendas/venda.html
@@ -68,11 +68,11 @@
     </li>
 	<li class="submenu"> <a href="#"><i class="icon-list-ul"></i> <span>Relatório</span> <span class="label label-important"></span></a>
       <ul>
+	    <li><a href="../relatorios/produto.html">Produto</a></li>
+		<li><a href="../relatorios/compra.html">Compra</a></li>
         <li><a href="../relatorios/venda.html">Venda</a></li>
         <li><a href="../relatorios/fornecedor.html">Fornecedor</a></li>
-        <li><a href="../relatorios/produto.html">Produto</a></li>
 		<li><a href="../relatorios/cliente.html">Cliente</a></li>
-		<li><a href="../relatorios/compra.html">Compra</a></li>
       </ul>
     </li>
   </ul>
@@ -115,14 +115,14 @@
             <div class="control-group">
               <label class="control-label">Data Inicial</label>
               <div class="controls">
-                <div  data-date="05-12-2017" class="input-append date datepicker">
-                  <input type="text" value="05-12-2017" data-date-format="dd-mm-yyyy" class="datepicker span11" id="mask-data" name="datainicial">
+                <div  data-date="" class="input-append date datepicker">
+                  <input type="text" value="" data-date-format="dd-mm-yyyy" class="datepicker span11" id="mask-data" name="datainicial" placeholder="__-__-___">
                 </div>
               </div>
 			  <label class="control-label">Data Final</label>
 			  <div class="controls">
-                <div  data-date="05-12-2017" class="input-append date datepicker">
-                  <input type="text" value="05-12-2017" data-date-format="dd-mm-yyyy" class="datepicker span11" id="mask-data2" name = "datafinal">
+                <div  data-date="" class="input-append date datepicker">
+                  <input type="text" value="" data-date-format="dd-mm-yyyy" class="datepicker span11" id="mask-data2" name = "datafinal" placeholder="__-__-___">
                 </div>
               </div>
             </div>
